<resources>
    <string name="app_name">LearnEnglish</string>

    <string name="go">GO</string>
    <string name="name">Name</string>
    <string name="age">Age</string>

    <string name="textlevel">בחר את רמת האנגלית </string>
    <string name="basis_button">בסיסי</string>
    <string name="advanced_level_a"> מתקדמים א</string>
    <string name="advanced_level_b"> מתקדמים ב</string>


    <string name="write_button" />
    <string name="vocabulary_button" />
    <string name="textview_vocabulary">אוצר מילים</string>
    <string name="textview_writing">כתיבת מילים</string>
    <string name="button_word" />
    <string name="textview_word">מילה במשבצת</string>
    <string name="button_grammar" />
    <string name="textview_grammar">דקדוק</string>
    <string name="listening_comprehension_button" />
    <string name="listening_comprehension_textview">הבנת הנשמע</string>

    <string name="oxford_guide_to_english_grammar">oxford guide to english grammar</string>
    <string name="basics_of_english_grammar">Basics of English Grammar</string>
    <string name="learn_english_website"> Learn English </string>
    <string name="english_grammar_exercises">English Grammar Exercises </string>
    <string name="grammar_text"> Websites</string>

</resources>
