<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo_main"/>


    <EditText
        android:id="@+id/txt_name"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/txt_age"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txt_age"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/btn_go"
        android:layout_alignLeft="@+id/txt_name"
        android:layout_alignStart="@+id/txt_name"
        android:layout_marginBottom="110dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_go"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:text="@string/go"
        android:textSize="18sp" />

</RelativeLayout>