<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GrammarActivity">

    <Button
        android:id="@+id/learn_english_web2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:background="@android:color/transparent"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:onClick="browser4"
        android:text="@string/english_grammar_exercises"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/oxford_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/learn_english_web2"
        android:layout_marginTop="62dp"
        android:background="@android:color/transparent"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:onClick="browser1"
        android:text="@string/oxford_guide_to_english_grammar"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/basic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/oxford_button"
        android:layout_marginTop="61dp"
        android:background="@android:color/transparent"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:onClick="browser2"
        android:text="@string/basics_of_english_grammar"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/learn_english_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/basic_button"
        android:layout_marginEnd="59dp"
        android:layout_marginTop="21dp"
        android:background="@android:color/transparent"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:onClick="browser3"
        android:text="@string/learn_english_website"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

</android.support.constraint.ConstraintLayout>